unpackaged/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <label>Appointment</label>
    <nameField>
        <label>Appointment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>