unpackaged/main/default/objects/Appointment__c/fields/Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Type__c</fullName>
    <label>Consultation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>