unpackaged/main/default/objects/Appointment__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <label>Doctor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr. Smith</fullName>
            </value>
            <value>
                <fullName>Dr. Lee</fullName>
            </value>
            <value>
                <fullName>Dr. Patel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>